content/docs/v1.23.0/gui-cheat-sheet.md
---
title: Mockoon GUI cheat sheet
meta:
  title: Mockoon GUI cheat sheet
  description: Have a doubt? Not sure how to navigate Mockoon's UI? This cheat sheet listing Mockoon\'s major features is for you!
order: 20
---

# Mockoon GUI cheat sheet

---

Are you discovering Mockoon's GUI or forgot what this button is used for? These cheat sheets are for you!

> The GUI cheat sheet is also available in PDF version <a href="/images/docs/shared/cheat-sheet/mockoon-cheat-sheet.pdf" className="btn btn-primary-desat-soft btn-xs"><i className='icon-download'></i>&nbsp;Download</a>

## Main endpoints view

The **main view** (below) contains your environments (or mock API) list, the environment's endpoints, and the currently selected endpoint and [response](docs:route-responses/multiple-responses). It's the view where you will spend the most time.

![Mockoon routes view{1200x637}](/images/docs/shared/cheat-sheet/routes-view.png)

The endpoint's responses configuration (below) lets you manage each endpoint responses list and each response parameter: serving a [file](docs:response-body/file-serving), a [body](docs:response-body/overview#body-editor-inline), or a [data bucket](docs:data-buckets/overview), with [rules](docs:route-responses/dynamic-rules) or not, etc.

![Mockoon responses view{1200x661}](/images/docs/shared/cheat-sheet/responses-view.png)

At the top of the window, you can access other environment related views: the **environment's headers**, the **data buckets**, the **requests logs**, the **environment's proxy** parameters, and the **environment's settings**.

## Data buckets view

The [**data buckets**](docs:data-buckets/overview) view let you create and modify key-value stores that can be [linked to route responses](docs:data-buckets/using-data-buckets#referencing-in-a-route-response) or used with the [`data` helper](docs:data-buckets/using-data-buckets#using-data-helpers). They are persisting between calls and can be regenerated by restarting the server.

![Mockoon data buckets view{1200x753}](/images/docs/shared/cheat-sheet/databuckets-view.png)

## Environment's requests logs view

The **request logging** view is especially useful to debug the entering calls and how Mockoon responded to them. For each, you will find the usual information: path, headers, body, etc.
You can also see if the call has been caught or forwarded through the [proxy](docs:proxy-mode) (if enabled) and [automatically mock](docs:requests-logging) entering requests that were not caught.
Each environment (or mock API) has its own entering requests recording.

![Mockoon logs view{1200x753}](/images/docs/shared/cheat-sheet/logs-view.png)

## Environment's proxy parameters view

This view allows you to [enable the proxy mode](docs:proxy-mode) and modify its behavior: removing the API prefix, adding specific headers to the proxied server request or response, etc.

![Mockoon proxy view{1200x551}](/images/docs/shared/cheat-sheet/proxy-view.png)

## Environment's settings view

This view is the place where you can set up global settings for each environment. Changing the environment name, port, or API prefix, [enabling HTTPS and using a custom certificate](docs:serving-over-tls), [handling OPTIONS pre-flight requests automatically](docs:cors), etc.

![Mockoon settings view{1200x645}](/images/docs/shared/cheat-sheet/settings-view.png)
